--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-    height: 100vh;
+    height: 100%;
 }
 
 body {
@@ -14,8 +14,6 @@ body {
 }
 
 .flex-container {
-    position: absolute;
-    top: 0;
     height: 100%;
     padding: 0;
     margin: 0;
@@ -42,4 +40,13 @@ body {
 
 #success_message {
     display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    .flex-container {
+        position: absolute;
+        top: 25px;
+        height: auto;
+        overflow: scroll;
+    }
 }
